// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SCDL CLI addProducer() should create MiscScdlProducerEntity 1`] = `
Object {
  "_id": Any<ObjectId>,
  "lastUpdate": Any<Date>,
  "name": "Région Bretagne",
  "siret": "23350001600040",
  "slug": "bretagne",
}
`;

exports[`SCDL CLI parsing edge cases should add grants with exercise from its own column 1`] = `
Array [
  2023,
  2023,
  2023,
]
`;

exports[`SCDL CLI parsing parse should add grants with exercise from conventionDate 1`] = `
Array [
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-10",
      "datesPeriodeVersement": "2019-05-20",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "13579246800043",
      "idRAE": "Non",
      "montant": "45000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102661732",
      "rnaBeneficiaire": "W123456789",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-08-30",
      "datesPeriodeVersement": "2019-02-15/2022-02-14",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "11223344500034",
      "idRAE": "Non",
      "montant": "50000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_2",
      "notificationUE": "non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "pourcentageSubvention": "0.50",
      "referenceDecision": "2102763867",
      "rnaBeneficiaire": "W123456974",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "exercice": 2019,
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-21",
      "datesPeriodeVersement": "2019-05-30",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "98876554100014",
      "idRAE": "Non",
      "montant": "5000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Pride Marseille 2019",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102672573",
      "rnaBeneficiaire": "W123158569",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": "\\"A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles\\"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2019,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "\\"A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles\\"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
]
`;

exports[`SCDL CLI parsing parse should add grants with exercise from its own column 1`] = `
Array [
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-10",
      "datesPeriodeVersement": "2019-05-20",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "exercice": "2020",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "13579246800043",
      "idRAE": "Non",
      "montant": "45000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102661732",
      "rnaBeneficiaire": "W123456789",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "exercice": 2020,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-08-30",
      "datesPeriodeVersement": "2019-02-15/2022-02-14",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "exercice": "2021",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "11223344500034",
      "idRAE": "Non",
      "montant": "50000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_2",
      "notificationUE": "non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "pourcentageSubvention": "0.50",
      "referenceDecision": "2102763867",
      "rnaBeneficiaire": "W123456974",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "exercice": 2021,
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-05-21",
      "datesPeriodeVersement": "2019-05-30",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "exercice": "2022",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "98876554100014",
      "idRAE": "Non",
      "montant": "5000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_1",
      "notificationUE": "non",
      "object": "Pride Marseille 2019",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102672573",
      "rnaBeneficiaire": "W123158569",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "exercice": 2022,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "UeNotification": false,
    "__data__": Object {
      "conditionsVersement": "UNIQUE",
      "dateConvention": "2019-10-21",
      "datesPeriodeVersement": "2019-10-25",
      "dispositifAide": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "exercice": "2023",
      "idAttribuant": "12000123400023",
      "idBeneficiaire": "74185296300016",
      "idRAE": "Non",
      "montant": "10000",
      "nature": "aide en numéraire",
      "nomAttribuant": "TEST_SOCLE_SCDL",
      "nomBeneficiaire": "ANNO_3",
      "notificationUE": "non",
      "object": "\\"A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles\\"",
      "pourcentageSubvention": "1.00",
      "referenceDecision": "2102804885",
      "rnaBeneficiaire": "W123111256",
    },
    "_id": Any<String>,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "\\"A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles\\"",
    "paymentConditions": "UNIQUE",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
]
`;

exports[`SCDL CLI parsing parseXls should add grants with exercise from conventionDate 1`] = `
Array [
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 3780000,
      "NOM Bénéficiaire": "Grand papi toto",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "81532076800016",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association au titre de 2023",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 3780000,
    "associationName": "Grand papi toto",
    "associationRna": "",
    "associationSiret": "81532076800016",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association au titre de 2023",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 1620000,
      "NOM Bénéficiaire": "Grand papi toto",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "81532076800016",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association au titre de 2023",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 1620000,
    "associationName": "Grand papi toto",
    "associationRna": "",
    "associationSiret": "81532076800016",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association au titre de 2023",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 5000,
      "NOM Bénéficiaire": "Super asso",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "82425361800018",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "Super asso",
    "associationRna": "",
    "associationSiret": "82425361800018",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 5000,
      "NOM Bénéficiaire": "Maman",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "89015017700019",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "Maman",
    "associationRna": "",
    "associationSiret": "89015017700019",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46007,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 4019,
      "NOM Bénéficiaire": "TOTO",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77921970000039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC63 - Programme d'actions 2022 - 2(F) - Amélioration de la sécurité routière (collisions)",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 4019,
    "associationName": "TOTO",
    "associationRna": "",
    "associationSiret": "77921970000039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC63 - Programme d'actions 2022 - 2(F) - Amélioration de la sécurité routière (collisions)",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2025-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 14500,
      "NOM Bénéficiaire": "TOTO",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77921970000039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC63 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité routière (collisions) et à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 14500,
    "associationName": "TOTO",
    "associationRna": "",
    "associationSiret": "77921970000039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC63 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité routière (collisions) et à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 43000,
      "NOM Bénéficiaire": "TOTO d’à côté",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77904070200035",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC03 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 43000,
    "associationName": "TOTO d’à côté",
    "associationRna": "",
    "associationSiret": "77904070200035",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC03 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46007,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 61356,
      "NOM Bénéficiaire": "TOTO plus loin",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77982878600032",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC69 - Programme d'actions 2022 - 1(F) - Aménagements favorables à la biodiversité, gestion de la venaison et communication",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 61356,
    "associationName": "TOTO plus loin",
    "associationRna": "",
    "associationSiret": "77982878600032",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC69 - Programme d'actions 2022 - 1(F) - Aménagements favorables à la biodiversité, gestion de la venaison et communication",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2025-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 11200,
      "NOM Bénéficiaire": "TOTO plus loin",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77982878600032",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC69 - Programme d'actions 2022 - 1(I) - Gestion de la venaison et communication",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 11200,
    "associationName": "TOTO plus loin",
    "associationRna": "",
    "associationSiret": "77982878600032",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC69 - Programme d'actions 2022 - 1(I) - Gestion de la venaison et communication",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 17942,
      "NOM Bénéficiaire": "TOTO perdu",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77625670900039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC07 - Programme d'actions 2022 - 2(I) - Suivis faunistiques et amélioration de la sécurité à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 17942,
    "associationName": "TOTO perdu",
    "associationRna": "",
    "associationSiret": "77625670900039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC07 - Programme d'actions 2022 - 2(I) - Suivis faunistiques et amélioration de la sécurité à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
]
`;

exports[`SCDL CLI parsing parseXls should add grants with exercise from its own column 1`] = `
Array [
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 3780000,
      "NOM Bénéficiaire": "Grand papi toto",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "81532076800016",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association au titre de 2023",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 3780000,
    "associationName": "Grand papi toto",
    "associationRna": "",
    "associationSiret": "81532076800016",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association au titre de 2023",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 1620000,
      "NOM Bénéficiaire": "Grand papi toto",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "81532076800016",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association au titre de 2023",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 1620000,
    "associationName": "Grand papi toto",
    "associationRna": "",
    "associationSiret": "81532076800016",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association au titre de 2023",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 5000,
      "NOM Bénéficiaire": "Super asso",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "82425361800018",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "Super asso",
    "associationRna": "",
    "associationSiret": "82425361800018",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 45653,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 5000,
      "NOM Bénéficiaire": "Maman",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "89015017700019",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "Subvention de fonctionnement général de l'association",
      "Référence de la décision": "CP-2022-12 / 01-5-7108",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 5000,
    "associationName": "Maman",
    "associationRna": "",
    "associationSiret": "89015017700019",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 01-5-7108",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "Subvention de fonctionnement général de l'association",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2024-12-27T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46007,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 4019,
      "NOM Bénéficiaire": "TOTO",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77921970000039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC63 - Programme d'actions 2022 - 2(F) - Amélioration de la sécurité routière (collisions)",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 4019,
    "associationName": "TOTO",
    "associationRna": "",
    "associationSiret": "77921970000039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC63 - Programme d'actions 2022 - 2(F) - Amélioration de la sécurité routière (collisions)",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2025-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 14500,
      "NOM Bénéficiaire": "TOTO",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77921970000039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC63 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité routière (collisions) et à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 14500,
    "associationName": "TOTO",
    "associationRna": "",
    "associationSiret": "77921970000039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC63 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité routière (collisions) et à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 43000,
      "NOM Bénéficiaire": "TOTO d’à côté",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77904070200035",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC03 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 43000,
    "associationName": "TOTO d’à côté",
    "associationRna": "",
    "associationSiret": "77904070200035",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC03 - Programme d'actions 2022 - 2(I) - Amélioration de la sécurité à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46007,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 61356,
      "NOM Bénéficiaire": "TOTO plus loin",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77982878600032",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC69 - Programme d'actions 2022 - 1(F) - Aménagements favorables à la biodiversité, gestion de la venaison et communication",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 61356,
    "associationName": "TOTO plus loin",
    "associationRna": "",
    "associationSiret": "77982878600032",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC69 - Programme d'actions 2022 - 1(F) - Aménagements favorables à la biodiversité, gestion de la venaison et communication",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2025-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Exercice": 2023,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 11200,
      "NOM Bénéficiaire": "TOTO plus loin",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77982878600032",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC69 - Programme d'actions 2022 - 1(I) - Gestion de la venaison et communication",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 11200,
    "associationName": "TOTO plus loin",
    "associationRna": "",
    "associationSiret": "77982878600032",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC69 - Programme d'actions 2022 - 1(I) - Gestion de la venaison et communication",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
  Object {
    "__data__": Object {
      "% du mt de la subvention attribuée au bénéficiaire": 1,
      "Aide d'Etat (ou pas) notifiée à l'UE": "Aides ne relevant pas d'une aide d'état",
      "Conditions de versement": "selon règlement des subventions de la Région",
      "Date de la convention": 44941,
      "Date(s) ou période(s) de versement": 46372,
      "Exercice": 2024,
      "Identification de l'attributaire": "200 033 767 00014",
      "Montant total de la subvention": 17942,
      "NOM Bénéficiaire": "TOTO perdu",
      "Nature de la subvention": "aide en numéraire",
      "Nom de l'attribuant": "Région Pétaouchnok",
      "N° SIRET": "77625670900039",
      "N° unique de référencement au RAE": "",
      "Objet de la subvention": "FDC07 - Programme d'actions 2022 - 2(I) - Suivis faunistiques et amélioration de la sécurité à la chasse",
      "Référence de la décision": "CP-2022-12 / 03-110-7222",
    },
    "_id": Any<String>,
    "aidSystem": "",
    "allocatorName": "Région Bretagne",
    "allocatorSiret": "23350001600040",
    "amount": 17942,
    "associationName": "TOTO perdu",
    "associationRna": "",
    "associationSiret": "77625670900039",
    "conventionDate": 2023-01-15T00:00:00.000Z,
    "decisionReference": "CP-2022-12 / 03-110-7222",
    "exercice": 2023,
    "grantPercentage": 1,
    "idRAE": "",
    "object": "FDC07 - Programme d'actions 2022 - 2(I) - Suivis faunistiques et amélioration de la sécurité à la chasse",
    "paymentConditions": "selon règlement des subventions de la Région",
    "paymentEndDate": null,
    "paymentNature": "aide en numéraire",
    "paymentStartDate": 2026-12-16T00:00:00.000Z,
    "producerSlug": "bretagne",
  },
]
`;
